Fix slide 8 typo

--- a/slides/EDUC641_7_continuousdescr.html
+++ b/slides/EDUC641_7_continuousdescr.html
@@ -299,8 +299,12 @@ Let's demonstrate using our WHO data of 183 countries to find the mean.
 
 The mean national life expectancy for these countries in 2015 is 71.64 years.
 
+&gt; **Reminder**:
+
 &gt; `\(i\)` = index of summation (the unit that the observations are in; e.g., schools, students, numbers)
+
 &gt; `\(n\)` = stopping point (number of observations)
+
 &gt; `\(x_i\)` = summation element (what we are summing)
 
 --
