--- a/assignments.html
+++ b/assignments.html
@@ -952,7 +952,7 @@ Lectures
 <a href="./slides/EDUC641_6_history.html">6. Troubling history of stats</a>
 <a href="./slides/EDUC641_7_continuousdescr.html">7. Continuous descriptives I</a>
 <a href="./slides/EDUC641_7_continuousdescr.html">8. Continuous descriptives II</a>
-<span class="nav-dropdown-header">9. Z-scores and effect sizes</span>
+<a href="./slides/EDUC641_9_transformations.html">9. Transformations and z-scores</a>
 <span class="nav-dropdown-header">10. CLT I</span>
 <span class="nav-dropdown-header">11. CLT II</span>
 <span class="nav-dropdown-header">12. NHST</span>
@@ -1027,7 +1027,9 @@ Lectures
     <li>
       <a href="./slides/EDUC641_7_continuousdescr.html">8. Continuous descriptives II</a>
     </li>
-    <li class="dropdown-header">9. Z-scores and effect sizes</li>
+    <li>
+      <a href="./slides/EDUC641_9_transformations.html">9. Transformations and z-scores</a>
+    </li>
     <li class="dropdown-header">10. CLT I</li>
     <li class="dropdown-header">11. CLT II</li>
     <li class="dropdown-header">12. NHST</li>
