--- a/about.html
+++ b/about.html
@@ -877,10 +877,10 @@ Lectures
 <a href="./slides/EDUC641_7_continuousdescr.html">7. Continuous descriptives I</a>
 <a href="./slides/EDUC641_7_continuousdescr.html">8. Continuous descriptives II</a>
 <a href="./slides/EDUC641_9_transformations.html">9. Transformations and z-scores</a>
-<span class="nav-dropdown-header">10. CLT I</span>
-<span class="nav-dropdown-header">11. CLT II</span>
-<span class="nav-dropdown-header">12. NHST</span>
-<span class="nav-dropdown-header">13. One-sample t-tests</span>
+<a href="./slides/EDUC641_10_inference.html">10. Normal distributions</a>
+<a href="./slides/EDUC641_10_inference.html">11. CLT I</a>
+<a href="./slides/EDUC641_10_inference.html">12. CLT II</a>
+<a href="./slides/EDUC641_10_inference.html">13. Z- and t-tests</a>
 <span class="nav-dropdown-header">14. Continuous relationships I</span>
 <span class="nav-dropdown-header">15. Continuous relationships II</span>
 <span class="nav-dropdown-header">16. Continuous relationships III</span>
@@ -954,10 +954,18 @@ Lectures
     <li>
       <a href="./slides/EDUC641_9_transformations.html">9. Transformations and z-scores</a>
     </li>
-    <li class="dropdown-header">10. CLT I</li>
-    <li class="dropdown-header">11. CLT II</li>
-    <li class="dropdown-header">12. NHST</li>
-    <li class="dropdown-header">13. One-sample t-tests</li>
+    <li>
+      <a href="./slides/EDUC641_10_inference.html">10. Normal distributions</a>
+    </li>
+    <li>
+      <a href="./slides/EDUC641_10_inference.html">11. CLT I</a>
+    </li>
+    <li>
+      <a href="./slides/EDUC641_10_inference.html">12. CLT II</a>
+    </li>
+    <li>
+      <a href="./slides/EDUC641_10_inference.html">13. Z- and t-tests</a>
+    </li>
     <li class="dropdown-header">14. Continuous relationships I</li>
     <li class="dropdown-header">15. Continuous relationships II</li>
     <li class="dropdown-header">16. Continuous relationships III</li>
