--- a/schedule.html
+++ b/schedule.html
@@ -953,10 +953,10 @@ Lectures
 <a href="./slides/EDUC641_7_continuousdescr.html">7. Continuous descriptives I</a>
 <a href="./slides/EDUC641_7_continuousdescr.html">8. Continuous descriptives II</a>
 <a href="./slides/EDUC641_9_transformations.html">9. Transformations and z-scores</a>
-<span class="nav-dropdown-header">10. CLT I</span>
-<span class="nav-dropdown-header">11. CLT II</span>
-<span class="nav-dropdown-header">12. NHST</span>
-<span class="nav-dropdown-header">13. One-sample t-tests</span>
+<a href="./slides/EDUC641_10_inference.html">10. Normal distributions</a>
+<a href="./slides/EDUC641_10_inference.html">11. CLT I</a>
+<a href="./slides/EDUC641_10_inference.html">12. CLT II</a>
+<a href="./slides/EDUC641_10_inference.html">13. Z- and t-tests</a>
 <span class="nav-dropdown-header">14. Continuous relationships I</span>
 <span class="nav-dropdown-header">15. Continuous relationships II</span>
 <span class="nav-dropdown-header">16. Continuous relationships III</span>
@@ -1030,10 +1030,18 @@ Lectures
     <li>
       <a href="./slides/EDUC641_9_transformations.html">9. Transformations and z-scores</a>
     </li>
-    <li class="dropdown-header">10. CLT I</li>
-    <li class="dropdown-header">11. CLT II</li>
-    <li class="dropdown-header">12. NHST</li>
-    <li class="dropdown-header">13. One-sample t-tests</li>
+    <li>
+      <a href="./slides/EDUC641_10_inference.html">10. Normal distributions</a>
+    </li>
+    <li>
+      <a href="./slides/EDUC641_10_inference.html">11. CLT I</a>
+    </li>
+    <li>
+      <a href="./slides/EDUC641_10_inference.html">12. CLT II</a>
+    </li>
+    <li>
+      <a href="./slides/EDUC641_10_inference.html">13. Z- and t-tests</a>
+    </li>
     <li class="dropdown-header">14. Continuous relationships I</li>
     <li class="dropdown-header">15. Continuous relationships II</li>
     <li class="dropdown-header">16. Continuous relationships III</li>
@@ -1213,14 +1221,24 @@ R
 <li>Includes constructing histograms, densities, stem-and-leaf, and
 box-and-whisker plots</li>
 </ul></li>
-<li>Describe special features of a normal distribution</li>
+<li>Construct a standardized or <span
+class="math inline">\(z\)</span>-score and explain its substantive
+meaning</li>
+<li>Use a <span class="math inline">\(z\)</span>-transformation to
+compare distributions, observations within distributions and interpret
+outlying values</li>
+<li>Describe special features of a normal (and standard normal)
+distribution</li>
+<li>Interpret a <span class="math inline">\(z\)</span>-statistic
+table</li>
 <li>Describe the distribution of repeated sample statistics drawn from a
 population, how this relates to the Central Limit Theorem (CLT) and how
 this is informative to statistical hypothesis testing</li>
 <li>Determine whether the mean value of a sample is different than a
-defined population value (when provided the <em>SD</em> of the variable,
-aka <span class="math inline">\(Z\)</span>-test)</li>
-<li>Conduct one-sample <span class="math inline">\(t\)</span>-tests</li>
+defined population mean, both when the population standard deviation of
+the variable is known ( <span class="math inline">\(z\)</span>-test) and
+when it is unknown (one-sample <span
+class="math inline">\(t\)</span>-test)</li>
 </ul>
 <p>Readings:</p>
 <ul>
@@ -1241,8 +1259,9 @@ href="./slides/EDUC641_7_continuousdescr.pdf">pdf</a></p></li>
 <li><p>Class 9 (10/25) slides: <a
 href="./slides/EDUC641_9_transformations.html">html</a> | <a
 href="./slides/EDUC641_9_transformations.pdf">pdf</a></p></li>
-<li><p>Classes 10-13 (10/27, 11/1, 11/3 &amp; 11/8) slides:
-<!-- [html](./slides/EDUC641_10_inference.html) | [pdf](./slides/EDUC641_10_inference.pdf) --></p></li>
+<li><p>Classes 10-13 (10/27, 11/1, 11/3 &amp; 11/8) slides: <a
+href="./slides/EDUC641_10_inference.html">html</a> | <a
+href="./slides/EDUC641_10_inference.pdf">pdf</a></p></li>
 <li><p>Data: <a
 href="./data/life_expectancy.csv">life_expectancy.csv</a> | <a
 href="./data/life_expectancy_codebook.pdf">codebook</a></p></li>
