--- a/slides/EDUC641_10_inference.html
+++ b/slides/EDUC641_10_inference.html
@@ -57,7 +57,7 @@ Suppose you are working for the World Health Organization and are investigating 
 
 **Our second task:** .blue[How similar are these subset of countries' average life expectancy to our known "population" average?]
 
-.small[*Note*: I've updated EDUC641_7_code.R with some tasks from last class and the one bit of coding we'll do at the very end of this unit. These next two classes are conceptual, so focus your energies there.]
+.small[*Note*: I've updated EDUC641_7_code.R with some tasks from last class and the one bit of coding we'll do at the very end of this unit. These next few classes are conceptual, so focus your energies there.]
 
 .footnote[[1] This is somewhat of a simplification. As we will learn, even if we had data on *all* countries, we wouldn't really know the "population" average; in fact, we almost never do and we are always estimating it.]
 
