--- a/assignments.html
+++ b/assignments.html
@@ -1145,15 +1145,18 @@ and a statistical inference from a chi-squared statistic</p></li>
 </div>
 <div id="assignment-3" class="section level2">
 <h2>3.3. Assignment 3</h2>
-<p>Continuous data 1: summarizing and displaying continuous data</p>
+<p>Continuous data 1: summarizing continuous data and <span
+class="math inline">\(t\)</span>-tests</p>
 <p>Objectives of this assignment</p>
 <ul>
 <li><p>Describe and summarize continuous data</p></li>
 <li><p>Create visualizations of continuous data</p></li>
+<li><p>Conduct and interpret a one-sample <span
+class="math inline">\(t\)</span>-test</p></li>
 </ul>
 <p>Deadline: November 7, 11:59pm</p>
-<p>Download:
-<!-- [html file](./assignments/assignment03.html) | [cont.csv dataset](./data/cont.csv) --></p>
+<p>Download: <a href="./assignments/assignment03.html">html file</a> |
+<a href="./data/cont.csv">cont.csv dataset</a></p>
 <p>Key: [doc file]; [R script]</p>
 </div>
 <div id="assignment-4" class="section level2">
