--- a/schedule.html
+++ b/schedule.html
@@ -1269,9 +1269,9 @@ href="./data/life_expectancy_codebook.pdf">codebook</a></p></li>
 </ul>
 <p>Assignment 3:</p>
 <ul>
-<li>Due: November 7, 11:59pm
-<!-- - [html file](./assignments/assignment03.html) -->
-<!-- - [cont.csv dataset](./data/cont.csv) --></li>
+<li>Due: November 7, 11:59pm</li>
+<li><a href="./assignments/assignment03.html">html file</a></li>
+<li><a href="./data/cont.csv">cont.csv dataset</a></li>
 </ul>
 </div>
 <div id="unit-4" class="section level2">
