Fix slide typos

--- a/syllabus.html
+++ b/syllabus.html
@@ -1120,7 +1120,7 @@ appointment)</li>
 to:</p>
 <ol style="list-style-type: decimal">
 <li>Articulate the principles of responsible and ethical quantitative
-research</li>
+research in education and human services</li>
 <li>Describe, summarize and visualize quantitative data that are
 categorical and continuous</li>
 <li>Describe, summarize and visualize the relationships between
@@ -1129,7 +1129,8 @@ quantitative data that are categorical and continuous</li>
 relationships between simple categorical and continuous data</li>
 <li>Describe strategies to improve the replicability and
 generalizability of quantitative research</li>
-<li>Use the R programming language to conduct all such analyses</li>
+<li>Use an open-source, object-oriented programming language to conduct
+all such analyses</li>
 </ol>
 </div>
 <div id="textbooks-and-reading-materials" class="section level1">
@@ -1148,7 +1149,7 @@ href="./schedule.html">schedule</a>.</p>
 the concepts have been introduced in class. See detailed schedule.</p>
 <div id="other-text-resources" class="section level3">
 <h3>Other text resources</h3>
-<p>There are literally thousands of high-quality introductory statistics
+<p>There are literally dozens of high-quality introductory statistics
 textbooks. We have particularly found the following to be helpful:</p>
 <p>Howell, D.C. (2013). Statistical Methods for Psychology. Cengage
 Learning: Belmont, CA. [A balanced book in terms of technical details
