Changing due date

--- a/assignments.html
+++ b/assignments.html
@@ -1154,7 +1154,7 @@ class="math inline">\(t\)</span>-tests</p>
 <li><p>Conduct and interpret a one-sample <span
 class="math inline">\(t\)</span>-test</p></li>
 </ul>
-<p>Deadline: November 7, 11:59pm</p>
+<p>Deadline: November 9, 9:00am</p>
 <p>Download: <a href="./assignments/assignment03.html">html file</a> |
 <a href="./data/cont.csv">cont.csv dataset</a></p>
 <p>Key: [doc file]; [R script]</p>
