--- a/schedule.html
+++ b/schedule.html
@@ -1269,7 +1269,7 @@ href="./data/life_expectancy_codebook.pdf">codebook</a></p></li>
 </ul>
 <p>Assignment 3:</p>
 <ul>
-<li>Due: November 7, 11:59pm</li>
+<li>Due: November 9, 9:00am</li>
 <li><a href="./assignments/assignment03.html">html file</a></li>
 <li><a href="./data/cont.csv">cont.csv dataset</a></li>
 </ul>
