Add week 7 slides

--- a/LICENSE.html
+++ b/LICENSE.html
@@ -876,12 +876,12 @@ Lectures
 <a href="./slides/EDUC641_7_continuousdescr.html">8. Continuous descriptives II</a>
 <a href="./slides/EDUC641_9_transformations.html">9. Transformations and z-scores</a>
 <a href="./slides/EDUC641_10_inference.html">10. Normal distributions</a>
-<a href="./slides/EDUC641_10_inference.html">11. CLT I</a>
-<a href="./slides/EDUC641_10_inference.html">12. CLT II</a>
-<a href="./slides/EDUC641_10_inference.html">13. Z- and t-tests</a>
-<span class="nav-dropdown-header">14. Continuous relationships I</span>
-<span class="nav-dropdown-header">15. Continuous relationships II</span>
-<span class="nav-dropdown-header">16. Continuous relationships III</span>
+<a href="./slides/EDUC641_10_inference.html">11. CLT</a>
+<a href="./slides/EDUC641_10_inference.html">12. Z- and t-tests</a>
+<a href="./slides/EDUC641_14_continuousrel.html">13. Continuous relationships I</a>
+<span class="nav-dropdown-header">14. Bivariate regression I</span>
+<span class="nav-dropdown-header">15. Bivariate regression II</span>
+<span class="nav-dropdown-header">16. Regression assumptions</span>
 <span class="nav-dropdown-header">17. NHST critiques</span>
 <span class="nav-dropdown-header">18. NHST critiques and summary</span>
 </div>
@@ -956,17 +956,17 @@ Lectures
       <a href="./slides/EDUC641_10_inference.html">10. Normal distributions</a>
     </li>
     <li>
-      <a href="./slides/EDUC641_10_inference.html">11. CLT I</a>
+      <a href="./slides/EDUC641_10_inference.html">11. CLT</a>
     </li>
     <li>
-      <a href="./slides/EDUC641_10_inference.html">12. CLT II</a>
+      <a href="./slides/EDUC641_10_inference.html">12. Z- and t-tests</a>
     </li>
     <li>
-      <a href="./slides/EDUC641_10_inference.html">13. Z- and t-tests</a>
+      <a href="./slides/EDUC641_14_continuousrel.html">13. Continuous relationships I</a>
     </li>
-    <li class="dropdown-header">14. Continuous relationships I</li>
-    <li class="dropdown-header">15. Continuous relationships II</li>
-    <li class="dropdown-header">16. Continuous relationships III</li>
+    <li class="dropdown-header">14. Bivariate regression I</li>
+    <li class="dropdown-header">15. Bivariate regression II</li>
+    <li class="dropdown-header">16. Regression assumptions</li>
     <li class="dropdown-header">17. NHST critiques</li>
     <li class="dropdown-header">18. NHST critiques and summary</li>
   </ul>
