--- a/schedule.html
+++ b/schedule.html
@@ -954,12 +954,12 @@ Lectures
 <a href="./slides/EDUC641_7_continuousdescr.html">8. Continuous descriptives II</a>
 <a href="./slides/EDUC641_9_transformations.html">9. Transformations and z-scores</a>
 <a href="./slides/EDUC641_10_inference.html">10. Normal distributions</a>
-<a href="./slides/EDUC641_10_inference.html">11. CLT I</a>
-<a href="./slides/EDUC641_10_inference.html">12. CLT II</a>
-<a href="./slides/EDUC641_10_inference.html">13. Z- and t-tests</a>
-<span class="nav-dropdown-header">14. Continuous relationships I</span>
-<span class="nav-dropdown-header">15. Continuous relationships II</span>
-<span class="nav-dropdown-header">16. Continuous relationships III</span>
+<a href="./slides/EDUC641_10_inference.html">11. CLT</a>
+<a href="./slides/EDUC641_10_inference.html">12. Z- and t-tests</a>
+<a href="./slides/EDUC641_14_continuousrel.html">13. Continuous relationships I</a>
+<span class="nav-dropdown-header">14. Bivariate regression I</span>
+<span class="nav-dropdown-header">15. Bivariate regression II</span>
+<span class="nav-dropdown-header">16. Regression assumptions</span>
 <span class="nav-dropdown-header">17. NHST critiques</span>
 <span class="nav-dropdown-header">18. NHST critiques and summary</span>
 </div>
@@ -1034,17 +1034,17 @@ Lectures
       <a href="./slides/EDUC641_10_inference.html">10. Normal distributions</a>
     </li>
     <li>
-      <a href="./slides/EDUC641_10_inference.html">11. CLT I</a>
+      <a href="./slides/EDUC641_10_inference.html">11. CLT</a>
     </li>
     <li>
-      <a href="./slides/EDUC641_10_inference.html">12. CLT II</a>
+      <a href="./slides/EDUC641_10_inference.html">12. Z- and t-tests</a>
     </li>
     <li>
-      <a href="./slides/EDUC641_10_inference.html">13. Z- and t-tests</a>
+      <a href="./slides/EDUC641_14_continuousrel.html">13. Continuous relationships I</a>
     </li>
-    <li class="dropdown-header">14. Continuous relationships I</li>
-    <li class="dropdown-header">15. Continuous relationships II</li>
-    <li class="dropdown-header">16. Continuous relationships III</li>
+    <li class="dropdown-header">14. Bivariate regression I</li>
+    <li class="dropdown-header">15. Bivariate regression II</li>
+    <li class="dropdown-header">16. Regression assumptions</li>
     <li class="dropdown-header">17. NHST critiques</li>
     <li class="dropdown-header">18. NHST critiques and summary</li>
   </ul>
@@ -1259,7 +1259,7 @@ href="./slides/EDUC641_7_continuousdescr.pdf">pdf</a></p></li>
 <li><p>Class 9 (10/25) slides: <a
 href="./slides/EDUC641_9_transformations.html">html</a> | <a
 href="./slides/EDUC641_9_transformations.pdf">pdf</a></p></li>
-<li><p>Classes 10-13 (10/27, 11/1, 11/3 &amp; 11/8) slides: <a
+<li><p>Classes 10-12 (10/27, 11/1, &amp; 11/3) slides: <a
 href="./slides/EDUC641_10_inference.html">html</a> | <a
 href="./slides/EDUC641_10_inference.pdf">pdf</a></p></li>
 <li><p>Data: <a
@@ -1305,15 +1305,17 @@ and 15.2</a></li>
 </ul>
 <p>Lecture slides:</p>
 <ul>
-<li>Classes 14-16 (11/10, 11/15 &amp; 11/22) slides:
-<!-- [html](./slides/EDUC641_14_continuousrel.html) | [pdf](./slides/EDUC641_14_continuousrel.pdf) -->
+<li>Class 13 slides (11/8) slides: <a
+href="./slides/EDUC641_14_continuousrel.html">html</a> | <a
+href="./slides/EDUC641_14_continuousrel.pdf">pdf</a></li>
+<li>Class 14-16 slides (11/10, 11/15 &amp; 11/22)
 <ul>
 <li><strong>No class on 11/17 (David traveling for conference) and 11/24
 (university holiday)</strong></li>
 </ul></li>
-<li>Data:
-<!-- [life_expectancy.csv](./data/life_expectancy.csv) --></li>
-<li>R code: <!-- [R script](./slides/EDUC641_14_code.R)  --></li>
+<li>Data: <a
+href="./data/life_expectancy.csv">life_expectancy.csv</a></li>
+<li>R code: <a href="./slides/EDUC641_14_code.R">R script</a></li>
 </ul>
 <p>Assignment 4:</p>
 <ul>
@@ -1334,8 +1336,8 @@ and 15.2</a></li>
 <h2>Final Assignment</h2>
 <ul>
 <li>Due December 7 at 11:59pm
-<!-- * [html file](./assignments/assignment05.html) -->
-<!-- * [ah01.csv](./data/ah01.csv); [ah02.csv](./data/ah02.csv) --></li>
+<!-- - [html file](./assignments/assignment05.html) -->
+<!-- - [ah01.csv](./data/ah01.csv); [ah02.csv](./data/ah02.csv) --></li>
 </ul>
 </div>
 
