--- a/slides/EDUC641_14_continuousrel.html
+++ b/slides/EDUC641_14_continuousrel.html
@@ -4,7 +4,7 @@
     <title>Examining the Relationship Between Continuous Variables</title>
     <meta charset="utf-8" />
     <meta name="author" content="David D. Liebowitz" />
-    <script src="EDUC641_14_continuousrel_files/header-attrs-2.14.3/header-attrs.js"></script>
+    <script src="EDUC641_14_continuousrel_files/header-attrs-2.10/header-attrs.js"></script>
     <link href="EDUC641_14_continuousrel_files/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="EDUC641_14_continuousrel_files/remark-css-0.0.1/uo.css" rel="stylesheet" />
     <link href="EDUC641_14_continuousrel_files/remark-css-0.0.1/ki-fonts.css" rel="stylesheet" />
@@ -15,15 +15,9 @@
     <textarea id="source">
 class: center, middle, inverse, title-slide
 
-.title[
 # Examining the Relationship Between Continuous Variables
-]
-.subtitle[
 ## EDUC 641: Unit 4 Part 1
-]
-.author[
 ### David D. Liebowitz
-]
 
 ---
 
@@ -62,7 +56,7 @@ class: center, middle, inverse, title-slide
 ---
 # Materials
 
-### 1. Death penalty data (in file called life_expectancy.csv)
+### 1. Life expectancy data (in file called life_expectancy.csv)
 ### 2. Codebook describing the contents of said data
 ### 3. R script to conduct the data analytic tasks of the unit (EDUC641_14_code.R)
 
@@ -354,45 +348,6 @@ if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
     deleted = true;
   });
 })();
-// add `data-at-shortcutkeys` attribute to <body> to resolve conflicts with JAWS
-// screen reader (see PR #262)
-(function(d) {
-  let res = {};
-  d.querySelectorAll('.remark-help-content table tr').forEach(tr => {
-    const t = tr.querySelector('td:nth-child(2)').innerText;
-    tr.querySelectorAll('td:first-child .key').forEach(key => {
-      const k = key.innerText;
-      if (/^[a-z]$/.test(k)) res[k] = t;  // must be a single letter (key)
-    });
-  });
-  d.body.setAttribute('data-at-shortcutkeys', JSON.stringify(res));
-})(document);
-(function() {
-  "use strict"
-  // Replace <script> tags in slides area to make them executable
-  var scripts = document.querySelectorAll(
-    '.remark-slides-area .remark-slide-container script'
-  );
-  if (!scripts.length) return;
-  for (var i = 0; i < scripts.length; i++) {
-    var s = document.createElement('script');
-    var code = document.createTextNode(scripts[i].textContent);
-    s.appendChild(code);
-    var scriptAttrs = scripts[i].attributes;
-    for (var j = 0; j < scriptAttrs.length; j++) {
-      s.setAttribute(scriptAttrs[j].name, scriptAttrs[j].value);
-    }
-    scripts[i].parentElement.replaceChild(s, scripts[i]);
-  }
-})();
-(function() {
-  var links = document.getElementsByTagName('a');
-  for (var i = 0; i < links.length; i++) {
-    if (/^(https?:)?\/\//.test(links[i].getAttribute('href'))) {
-      links[i].target = '_blank';
-    }
-  }
-})();
 // adds .remark-code-has-line-highlighted class to <pre> parent elements
 // of code chunks containing highlighted lines with class .remark-code-line-highlighted
 (function(d) {
@@ -410,6 +365,17 @@ if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
   }
   preParents.forEach(p => p.classList.add("remark-code-has-line-highlighted"));
 })(document);</script>
+
+<script>
+(function() {
+  var links = document.getElementsByTagName('a');
+  for (var i = 0; i < links.length; i++) {
+    if (/^(https?:)?\/\//.test(links[i].getAttribute('href'))) {
+      links[i].target = '_blank';
+    }
+  }
+})();
+</script>
 
 <script>
 slideshow._releaseMath = function(el) {
