--- a/slides/EDUC641_15_regression.html
+++ b/slides/EDUC641_15_regression.html
@@ -4,7 +4,7 @@
     <title>Examining the Relationship Between Continuous Variables</title>
     <meta charset="utf-8" />
     <meta name="author" content="David D. Liebowitz" />
-    <script src="EDUC641_15_regression_files/header-attrs-2.14.3/header-attrs.js"></script>
+    <script src="EDUC641_15_regression_files/header-attrs-2.10/header-attrs.js"></script>
     <link href="EDUC641_15_regression_files/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="EDUC641_15_regression_files/remark-css-0.0.1/uo.css" rel="stylesheet" />
     <link href="EDUC641_15_regression_files/remark-css-0.0.1/ki-fonts.css" rel="stylesheet" />
@@ -15,15 +15,9 @@
     <textarea id="source">
 class: center, middle, inverse, title-slide
 
-.title[
 # Examining the Relationship Between Continuous Variables
-]
-.subtitle[
 ## EDUC 641: Unit 4 Part 2
-]
-.author[
 ### David D. Liebowitz
-]
 
 ---
 
@@ -41,8 +35,12 @@ class: center, middle, inverse, title-slide
 - Visualize and substantively describe the relationship between two continuous variables 
 - Describe and interpret a fitted bivariate regression line
 - Describe and interpret components of a fitted bivariate linear regression model
+
+.grey-light[
 - Visualize and substantively interpret residuals resulting from a bivariate regression model
 - Conduct a statistical inference test of the slope and intercept of a bivariate regression model
+]
+
 - Write R scripts to conduct these analyses
 
 
@@ -58,26 +56,150 @@ class: center, middle, inverse, title-slide
 ---
 # Materials
 
-### 1. Death penalty data (in file called life_expectancy.csv)
+### 1. Life expectancy data (in file called life_expectancy.csv)
 ### 2. Codebook describing the contents of said data
 ### 3. R script to conduct the data analytic tasks of the unit
+---
+class: middle, inverse
+
+# Our continuous relationship 
+### (and some data-cleaning)
+
+
+---
+# Reading our data in
+
+```r
+who &lt;- read.csv(here("data/life_expectancy.csv")) %&gt;%
+  # first making variable names take a common format
+  janitor::clean_names() %&gt;% 
+  # filtering to focus only on 2015
+  filter(year == 2015) %&gt;%
+  # selecting only the variables we need
+  select(country, status, schooling, life_expectancy) %&gt;% 
+  # renaming one of the variables that is really misnamed
+  rename(region = country) %&gt;% 
+  # rounding life expectancy to nearest year
+  mutate(life_expectancy = round(life_expectancy, digits = 0))
+```
+
+---
+# First data cleaning step:
+
+### Identify missingness
+
+```r
+sum(is.na(who$life_expectancy))
+```
+
+```
+#&gt; [1] 0
+```
+
+```r
+sum(is.na(who$schooling))
+```
+
+```
+#&gt; [1] 10
+```
+
+```r
+### For the really ambitious...
+sapply(who, function(x) sum(is.na(x)))
+```
+
+```
+#&gt;          region          status       schooling life_expectancy 
+#&gt;               0               0              10               0
+```
+
+--
+
+.blue[**So some missingness...what do we do?**]
+
+---
+# Listwise vs. pairwise deletion
+
+- .red-pink[**Listwise**]: any observations with any missingness (NA) for any of the variables to be used in our analysis are dropped. Analysis only conducted on observations that have complete data
+
+- .red-pink[**Pairwise**]: observations with missingness for some of the variables to be used in analysis are retained and included in sample when the particular analysis does rely on that variable, but are necessarily excluded in analyses that rely on the variable with missingness.
+
+--
+
+
+```r
+mean(who$life_expectancy, na.rm = T)
+```
+
+```
+#&gt; [1] 71.63934
+```
+
+```r
+mean(who$schooling, na.rm = T)
+```
+
+```
+#&gt; [1] 12.92717
+```
+
+.blue[**How have we handled our missing data in estimating these univariate measures of central tendency?**]
+
+---
+# The chainsaw approach
+
+.pull-left[
+- Generally, we want to have a stable analytic sample so that differences across estimation strategies reflect differences in our models rather than sample differences
+- However, simply dropping these observations may (severely) limit our desired external generalizability
+- There are various imputation methods that you will explore more in EDUC 645
+- With large data and a small amount of missingness, it generally doesn't matter what you do
+- For now, we're going to employ .red-pink[**listwise**] deletion
+]
+
+.pull-right[
+&lt;img src="bttf.gif" style="display: block; margin: auto;" /&gt;
+]
+
+--
+
+
+```r
+who &lt;- filter(who, !is.na(schooling))
+nrow(who)
+```
+
+```
+#&gt; [1] 173
+```
+---
+# A reminder of our relationship
+
+
+```r
+biv &lt;- ggplot(data = who, aes(x = schooling, y = life_expectancy)) + 
+        geom_point() 
+```
+&lt;img src="EDUC641_15_regression_files/figure-html/unnamed-chunk-8-1.svg" style="display: block; margin: auto;" /&gt;
 
 ---
 class: middle, inverse
 # A gentle introduction to bivariate regression: &lt;br&gt; Ordinary-Least Squares (OLS)-fitted regression lines
 
 ---
-# A relationship reminder
-&lt;img src="EDUC641_15_regression_files/figure-html/unnamed-chunk-2-1.svg" style="display: block; margin: auto;" /&gt;
----
 # OLS-fitted regression line
-&lt;img src="EDUC641_15_regression_files/figure-html/unnamed-chunk-3-1.svg" style="display: block; margin: auto;" /&gt;
 
-.red[*The fitted regression line tells us the best prediction for the values of LIFE_EXPECTANCY.*]
+```r
+biv + geom_smooth(method = lm, se = F)
+```
+
+&lt;img src="EDUC641_15_regression_files/figure-html/unnamed-chunk-9-1.svg" style="display: block; margin: auto;" /&gt;
+
+.red-pink[*The fitted regression line tells us the best prediction for the values of LIFE_EXPECTANCY.*]
 
 ---
 # Some intuition
-&lt;img src="EDUC641_15_regression_files/figure-html/unnamed-chunk-4-1.svg" style="display: block; margin: auto;" /&gt;
+&lt;img src="EDUC641_15_regression_files/figure-html/unnamed-chunk-10-1.svg" style="display: block; margin: auto;" /&gt;
 
 --
 
@@ -85,10 +207,38 @@ Can think of the OLS-fitted regression line as a stick held in place by thumbtac
 
 ---
 # A visualization
-&lt;iframe src="https://daviddl.shinyapps.io/line_ss/?showcase=0" width="100%" height="550px" data-external="1"&gt;&lt;/iframe&gt;
+&lt;iframe src="https://daviddl.shinyapps.io/line_ss/?showcase=0" width="100%" height="550px"&gt;&lt;/iframe&gt;
+---
+# Pictures to equations
+
+So, the Ordinary-Least Squares .red-pink[**line of best fit**] minimizes the distance between it and all observations in the point cloud. Critically helpful to us: this line of best fit provides a two-number .red-pink[**summary of the relationship**] between our two continuous variables.
+
+As with any straight line, it can be characterized by a simple algebraic equation. Recall the .red-pink[**slope-intercept**] form of a linear equation from 7&lt;sup&gt;th&lt;/sup&gt; grade:
+`$$y=mx + b$$`
+--
+
+.blue[**What do each of these terms represent?**]
+&lt;img src="EDUC641_15_regression_files/figure-html/unnamed-chunk-12-1.svg" style="display: block; margin: auto;" /&gt;
 
 ---
-# Implementing in R
+# Pictures to equations
+
+.small[.red[**HOWEVER**], we do not represent **lines of best fit** with equations in the **slope-intercept** form! .blue[**Why not?**]]
+&lt;img src="EDUC641_15_regression_files/figure-html/unnamed-chunk-13-1.svg" style="display: block; margin: auto;" /&gt;
+
+--
+
+.small[The slope-intercept form represents a deterministic relationship (*y* equals exactly *mx*+*b*). In statistics, we use the line of best fit to approximate the relationship. The line is straight ("smooth"), but there is a lot of variation ("roughness") around it, so we write this equation differently. We'll learn the formal way to represent this relationship in 643. For now, we'll use this slope-intercept form for convenience.]
+
+--
+
+.small[We can, in fact, calculate by hand the slope and the y-intercept of the line of best fit, using each (*x*, *y*) pairing for each observation. However, as you can guess, this is much more straightforward to do using a statistical software package.]
+
+--
+.small[Turn the page to observe the wonders of our first regression fit...!]
+
+---
+# Fitting a regression in R
 
 ```r
 fit &lt;- lm(life_expectancy ~ schooling, data=who)
@@ -116,7 +266,7 @@ summary(fit)
 #&gt; F-statistic: 343.5 on 1 and 171 DF,  p-value: &lt; 2.2e-16
 ```
 ---
-# The fitted equation
+# Interpreting the results
 
 ```
 #&gt; 
@@ -139,7 +289,7 @@ summary(fit)
 #&gt; F-statistic: 343.5 on 1 and 171 DF,  p-value: &lt; 2.2e-16
 ```
 
-These "coefficients" tell you where the fitted trend line should be drawn:
+These .red-pink[**coefficients**] tell you where the fitted trend line should be drawn:
 $$
 \small{
 \left[ \textrm{Predicted value of } LIFE\_EXPECTANCY\right]  = 
@@ -150,7 +300,7 @@ $$
 # Fitted values
 
 Can substitute values for the "predictor" `\((SCHOOLING)\)` into the fitted equation to compute the *predicted* values of `\(LIFE\_EXPECTANCY\)`. 
-&lt;img src="EDUC641_15_regression_files/figure-html/unnamed-chunk-8-1.svg" style="display: block; margin: auto;" /&gt;
+&lt;img src="EDUC641_15_regression_files/figure-html/unnamed-chunk-16-1.svg" style="display: block; margin: auto;" /&gt;
 
 --
 
@@ -161,7 +311,7 @@ Can do this for our old friend Chile ... and all others...
 
 So we can re-construct the line of best fit from the fitted values:
 
-&lt;img src="EDUC641_15_regression_files/figure-html/unnamed-chunk-9-1.svg" style="display: block; margin: auto;" /&gt;
+&lt;img src="EDUC641_15_regression_files/figure-html/unnamed-chunk-17-1.svg" style="display: block; margin: auto;" /&gt;
 
 ---
 # Fitted values
@@ -188,7 +338,37 @@ mean(who$life_expectancy)
 # Fitted values
 
 Note that the fitted line always goes through the average of the predictors
-&lt;img src="EDUC641_15_regression_files/figure-html/unnamed-chunk-11-1.svg" style="display: block; margin: auto;" /&gt;
+&lt;img src="EDUC641_15_regression_files/figure-html/unnamed-chunk-19-1.svg" style="display: block; margin: auto;" /&gt;
+
+---
+class: middle, inverse
+# Synthesis and wrap-up
+
+
+---
+# Goals of the unit
+
+- Describe relationships between quantitative data that are continuous
+- Visualize and substantively describe the relationship between two continuous variables 
+- Describe and interpret a fitted bivariate regression line
+- Describe and interpret components of a fitted bivariate linear regression model
+
+.grey-light[
+- Visualize and substantively interpret residuals resulting from a bivariate regression model
+- Conduct a statistical inference test of the slope and intercept of a bivariate regression model
+]
+
+- Write R scripts to conduct these analyses
+
+---
+# To Dos
+
+### Reading
+LSWR Chapter 15.1 and 15.2: bivariate regression
+
+### Assignments
+Assignment #4 Due November 28 at 11:59PM
+
 ---
 # The regression equation
 
@@ -327,7 +507,7 @@ With an alpha-threshold of 0.05, `\(2^{-16}\)` is definitely less than 0.05. Thu
 ---
 # Writing it up
 .pull-left[
-&lt;img src="EDUC641_15_regression_files/figure-html/unnamed-chunk-14-1.svg" style="display: block; margin: auto;" /&gt;
+&lt;img src="EDUC641_15_regression_files/figure-html/unnamed-chunk-22-1.svg" style="display: block; margin: auto;" /&gt;
 ]
 
 .pull-right[
@@ -341,14 +521,14 @@ class: middle, inverse
 
 ---
 # Residual analysis
-&lt;img src="EDUC641_15_regression_files/figure-html/unnamed-chunk-15-1.svg" style="display: block; margin: auto;" /&gt;
+&lt;img src="EDUC641_15_regression_files/figure-html/unnamed-chunk-23-1.svg" style="display: block; margin: auto;" /&gt;
 
 Our fitted regression line contains the "predicted" values of *LIFE_EXPECTANCY* for each value of *SCHOOLING*. But almost all of the "actual" values of *LIFE_EXPECTANCY* lie off the actual line regression line.
 
 ---
 # An example: Chile
 
-&lt;img src="EDUC641_15_regression_files/figure-html/unnamed-chunk-16-1.svg" style="display: block; margin: auto;" /&gt;
+&lt;img src="EDUC641_15_regression_files/figure-html/unnamed-chunk-24-1.svg" style="display: block; margin: auto;" /&gt;
 
 Observed values for Chile: `\(LIFE\_EXPECTANCY = 85\)`; `\(SCHOOLING = 16.3\)` &lt;br&gt;
 Predicted value of *LIFE_EXPECTANCY* for Chile:
@@ -360,7 +540,7 @@ $$
 $$
 ---
 # An example: Chile
-&lt;img src="EDUC641_15_regression_files/figure-html/unnamed-chunk-17-1.svg" style="display: block; margin: auto;" /&gt;
+&lt;img src="EDUC641_15_regression_files/figure-html/unnamed-chunk-25-1.svg" style="display: block; margin: auto;" /&gt;
 `\(\hat{LIFE\_EXPECTANCY} = 79.20\)` &lt;br&gt;
 Actual life expectancy = 85
 
@@ -370,7 +550,7 @@ Actual life expectancy = 85
 
 ---
 # Now Egypt
-&lt;img src="EDUC641_15_regression_files/figure-html/unnamed-chunk-18-1.svg" style="display: block; margin: auto;" /&gt;
+&lt;img src="EDUC641_15_regression_files/figure-html/unnamed-chunk-26-1.svg" style="display: block; margin: auto;" /&gt;
 Observed values for Egypt: `\(LIFE\_EXPECTANCY = 79\)`; `\(SCHOOLING = 13.1\)` &lt;br&gt;
 
 .blue[Can you calculate the predicted value of *LIFE_EXPECTANCY* for Egypt and compare it to the observed?]
@@ -441,7 +621,7 @@ For the *p*-values that we computed in the regression analysis to be correct, th
 boxplot(resid(fit))
 ```
 
-&lt;img src="EDUC641_15_regression_files/figure-html/unnamed-chunk-22-1.svg" style="display: block; margin: auto;" /&gt;
+&lt;img src="EDUC641_15_regression_files/figure-html/unnamed-chunk-30-1.svg" style="display: block; margin: auto;" /&gt;
 
 --
 
@@ -459,7 +639,7 @@ ggplot(who, aes(x = resid)) +
     theme_minimal(base_size = 16)
 ```
 
-&lt;img src="EDUC641_15_regression_files/figure-html/unnamed-chunk-23-1.svg" style="display: block; margin: auto;" /&gt;
+&lt;img src="EDUC641_15_regression_files/figure-html/unnamed-chunk-31-1.svg" style="display: block; margin: auto;" /&gt;
 
 --
 
@@ -470,7 +650,7 @@ Pretty good, pretty good...
 # Residual vs. fitted plot 
 
 For the *p*-values that we computed in the regression analysis to be correct, the residuals **must be normally distributed**
-&lt;img src="EDUC641_15_regression_files/figure-html/unnamed-chunk-24-1.svg" style="display: block; margin: auto;" /&gt;
+&lt;img src="EDUC641_15_regression_files/figure-html/unnamed-chunk-32-1.svg" style="display: block; margin: auto;" /&gt;
 
 #### Key assumption checks for normality:
 - The residuals "bounce randomly" around the 0 line. 
@@ -481,7 +661,7 @@ For the *p*-values that we computed in the regression analysis to be correct, th
 # Residual vs. fitted plot
 
 For the *p*-values that we computed in the regression analysis to be correct, the residuals **must be normally distributed**
-&lt;img src="EDUC641_15_regression_files/figure-html/unnamed-chunk-25-1.svg" style="display: block; margin: auto;" /&gt;
+&lt;img src="EDUC641_15_regression_files/figure-html/unnamed-chunk-33-1.svg" style="display: block; margin: auto;" /&gt;
 
 #### Key assumption checks for normality:
 - The residuals "bounce randomly" around the 0 line. 
@@ -588,45 +768,6 @@ if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
     deleted = true;
   });
 })();
-// add `data-at-shortcutkeys` attribute to <body> to resolve conflicts with JAWS
-// screen reader (see PR #262)
-(function(d) {
-  let res = {};
-  d.querySelectorAll('.remark-help-content table tr').forEach(tr => {
-    const t = tr.querySelector('td:nth-child(2)').innerText;
-    tr.querySelectorAll('td:first-child .key').forEach(key => {
-      const k = key.innerText;
-      if (/^[a-z]$/.test(k)) res[k] = t;  // must be a single letter (key)
-    });
-  });
-  d.body.setAttribute('data-at-shortcutkeys', JSON.stringify(res));
-})(document);
-(function() {
-  "use strict"
-  // Replace <script> tags in slides area to make them executable
-  var scripts = document.querySelectorAll(
-    '.remark-slides-area .remark-slide-container script'
-  );
-  if (!scripts.length) return;
-  for (var i = 0; i < scripts.length; i++) {
-    var s = document.createElement('script');
-    var code = document.createTextNode(scripts[i].textContent);
-    s.appendChild(code);
-    var scriptAttrs = scripts[i].attributes;
-    for (var j = 0; j < scriptAttrs.length; j++) {
-      s.setAttribute(scriptAttrs[j].name, scriptAttrs[j].value);
-    }
-    scripts[i].parentElement.replaceChild(s, scripts[i]);
-  }
-})();
-(function() {
-  var links = document.getElementsByTagName('a');
-  for (var i = 0; i < links.length; i++) {
-    if (/^(https?:)?\/\//.test(links[i].getAttribute('href'))) {
-      links[i].target = '_blank';
-    }
-  }
-})();
 // adds .remark-code-has-line-highlighted class to <pre> parent elements
 // of code chunks containing highlighted lines with class .remark-code-line-highlighted
 (function(d) {
@@ -644,6 +785,17 @@ if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
   }
   preParents.forEach(p => p.classList.add("remark-code-has-line-highlighted"));
 })(document);</script>
+
+<script>
+(function() {
+  var links = document.getElementsByTagName('a');
+  for (var i = 0; i < links.length; i++) {
+    if (/^(https?:)?\/\//.test(links[i].getAttribute('href'))) {
+      links[i].target = '_blank';
+    }
+  }
+})();
+</script>
 
 <script>
 slideshow._releaseMath = function(el) {
