Assignment 3 keys posted

--- a/assignments.html
+++ b/assignments.html
@@ -1157,7 +1157,8 @@ class="math inline">\(t\)</span>-test</p></li>
 <p>Deadline: November 9, 9:00am</p>
 <p>Download: <a href="./assignments/assignment03.html">html file</a> |
 <a href="./data/cont.csv">cont.csv dataset</a></p>
-<p>Key: [doc file]; [R script]</p>
+<p>Key: <a href="./assignments/keys/assignment03_key.docx">doc file</a>;
+<a href="./assignments/keys/assignment03_key.R">R script</a></p>
 </div>
 <div id="assignment-4" class="section level2">
 <h2>3.4. Assignment 4</h2>
