--- a/LICENSE.html
+++ b/LICENSE.html
@@ -879,7 +879,7 @@ Lectures
 <a href="./slides/EDUC641_10_inference.html">11. CLT</a>
 <a href="./slides/EDUC641_10_inference.html">12. Z- and t-tests</a>
 <a href="./slides/EDUC641_14_continuousrel.html">13. Continuous relationships I</a>
-<span class="nav-dropdown-header">14. Bivariate regression I</span>
+<a href="./slides/EDUC641_15_regression.html">14. Bivariate regression I</a>
 <span class="nav-dropdown-header">15. Bivariate regression II</span>
 <span class="nav-dropdown-header">16. Regression assumptions</span>
 <span class="nav-dropdown-header">17. NHST critiques</span>
@@ -964,7 +964,9 @@ Lectures
     <li>
       <a href="./slides/EDUC641_14_continuousrel.html">13. Continuous relationships I</a>
     </li>
-    <li class="dropdown-header">14. Bivariate regression I</li>
+    <li>
+      <a href="./slides/EDUC641_15_regression.html">14. Bivariate regression I</a>
+    </li>
     <li class="dropdown-header">15. Bivariate regression II</li>
     <li class="dropdown-header">16. Regression assumptions</li>
     <li class="dropdown-header">17. NHST critiques</li>
