--- a/schedule.html
+++ b/schedule.html
@@ -957,7 +957,7 @@ Lectures
 <a href="./slides/EDUC641_10_inference.html">11. CLT</a>
 <a href="./slides/EDUC641_10_inference.html">12. Z- and t-tests</a>
 <a href="./slides/EDUC641_14_continuousrel.html">13. Continuous relationships I</a>
-<span class="nav-dropdown-header">14. Bivariate regression I</span>
+<a href="./slides/EDUC641_15_regression.html">14. Bivariate regression I</a>
 <span class="nav-dropdown-header">15. Bivariate regression II</span>
 <span class="nav-dropdown-header">16. Regression assumptions</span>
 <span class="nav-dropdown-header">17. NHST critiques</span>
@@ -1042,7 +1042,9 @@ Lectures
     <li>
       <a href="./slides/EDUC641_14_continuousrel.html">13. Continuous relationships I</a>
     </li>
-    <li class="dropdown-header">14. Bivariate regression I</li>
+    <li>
+      <a href="./slides/EDUC641_15_regression.html">14. Bivariate regression I</a>
+    </li>
     <li class="dropdown-header">15. Bivariate regression II</li>
     <li class="dropdown-header">16. Regression assumptions</li>
     <li class="dropdown-header">17. NHST critiques</li>
@@ -1305,10 +1307,13 @@ and 15.2</a></li>
 </ul>
 <p>Lecture slides:</p>
 <ul>
-<li>Class 13 slides (11/8) slides: <a
+<li>Class 13 (11/8) slides: <a
 href="./slides/EDUC641_14_continuousrel.html">html</a> | <a
 href="./slides/EDUC641_14_continuousrel.pdf">pdf</a></li>
-<li>Class 14-16 slides (11/10, 11/15 &amp; 11/22)
+<li>Class 14 (11/10) slides: <a
+href="./slides/EDUC641_15_regression.html">html</a> | <a
+href="./slides/EDUC641_15_regression.pdf">pdf</a></li>
+<li>Class 15-16 slides (11/15 &amp; 11/22)
 <ul>
 <li><strong>No class on 11/17 (David traveling for conference) and 11/24
 (university holiday)</strong></li>
